--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coca-cola</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css
 </head>
 <body>
     <section>
